# budgetwings

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CASE_STUDY.md  CODEX_EXECUTION_GUIDE.md  Dockerfile  LICENSE  PRD.md  README.md  cli.py  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  daily_run.yml  deploy.yml  scrape.yml
agents/: __init__.py  analyst.py  base.py  graph.py  guide.py  orchestrator.py  scout.py  validator.py
archive/: CODEX_EXECUTION_GUIDE.md  README.md
archive/docs/: DATA_SOURCES.md
archive/scraper/: README.md  pipeline.py  scheduler.py  test_kiwi_scraper.py
archive/scraper/sources/: __init__.py  kiwi.py
bot/: data.py  main.py
data/: visa_policies.json
data/bench/: T2_before_after.md  T3_before_after.md  T4B_legacy_vs_agentic.md  price_parser_baseline.json  price_parser_structured.json  price_parser_structured_no_validation.json  price_parser_structured_with_validation.json  scout_mode_comparison.json
data/deals/: 2026-04-20.json  2026-04-21.json
data/guides/: 57266b9d-9f88-44d3-9850-b2a1faf38236.md  664ce8ff-8ff2-43e6-b81c-e690b7e42dac.md  691e768c-1158-4c49-b22e-4921940a47e3.md  8b58d575-bb2c-42bc-9e73-cde72c9f86c8.md  bangkok-student.md  chiang-mai-worker.md  d6f1693f-84d4-425d-909e-571abd3159b2.md  defd77f0-becb-4567-b4a4-7f607a0ecb3a.md  demo-bjs-xian-010.md  demo-sha-jeju-008.md  demo-szx-cnx-001.md  osaka-worker.md
data/probe/: T4_probe_report.md  llm_capability_matrix.json
db/: __init__.py  analytics.py  engine.py  models.py  repository.py
docs/: CONTRIBUTING.md  DATA_SOURCES.md  DECISIONS.md  GUIDE_TEMPLATE.md
engine/: __init__.py  deal_ranker.py  guide_generator.py  notification.py  persona_filter.py
eval/: __init__.py  compare.py  dataset.py  golden_deals.json  metrics.py  runner.py
eval/reports/: 2026-04-21.json  2026-04-21.md  2026-04-22.json  2026-04-22.md  2026-04-23.json  2026-04-23.md  2026-04-24.json  2026-04-24.md  2026-04-25.json  2026-04-25.md  2026-04-26.json  2026-04-26.md  2026-04-27.json  2026-04-27.md  2026-04-28.json  2026-04-28.md  2026-04-29.json  2026-04-29.md  2026-04-30.json  2026-04-30.md  2026-05-01.json  2026-05-01.md  2026-05-02.json  2026-05-02.md  2026-05-03.json  2026-05-03.md  2026-05-04.json  2026-05-04.md  2026-05-05.json  2026-05-05.md  2026-05-06.json  2026-05-06.md  2026-05-07.json  2026-05-07.md  2026-05-08.json  2026-05-08.md  2026-05-09.json  2026-05-09.md  2026-05-10.json  2026-05-10.md  (+150 more)
guides/asia/: chiang-mai.yaml  tokyo.yaml
guides/domestic/: chengdu.yaml
llm/: __init__.py  base.py  claude.py  openai_adapter.py
mcp_server/: __init__.py  config.json  server.py
models/: __init__.py  deal.py  guide.py  persona.py
observability/: __init__.py  tracer.py
prompts/: analyst.md  guide.md  scout.md
rag/: __init__.py  knowledge_base.py  seed_data.py
scraper/: README.md  __init__.py  base.py  pipeline.py  registry.py  run.py
scraper/sources/: kiwi.py  rail_cn.py  skyscanner.py
scripts/: bench_price_parser.py  bench_scout_modes.py  pipeline_loop.py  probe_llm_providers.py
tests/: test_agents_architecture.py  test_bot_data.py  test_db.py  test_eval.py  test_evidence_validator.py  test_graph.py  test_mcp.py  test_models.py  test_observability.py  test_pipeline_e2e.py  test_price_parser_structured.py  test_rag.py  test_scout_agentic.py  test_tools_agent_architecture.py
tests/fixtures/: price_parser_samples.json
tools/: __init__.py  base.py  currency.py  destinations.py  evidence_validator.py  holiday.py  price_parser.py  visa.py  weather.py  web_fetch.py  web_search.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/about/: page.tsx
web/app/eval/: page.tsx
web/app/guide/[id]/: page.tsx
web/app/status/: page.tsx
web/components/: DealCard.tsx  HomeClient.tsx
web/lib/: data.ts  shared.ts
