[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetwings"
version = "0.1.0"
description = "BudgetWings low-cost travel intelligence engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BudgetWings contributors" }
]
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "apscheduler>=3.10.0",
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12"
]

[tool.setuptools]
packages = [
  "bot",
  "engine",
  "models",
  "scraper",
  "scraper.sources"
]
py-modules = ["config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["bot", "engine", "models", "scraper", "config"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
