[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetwings"
version = "0.1.0"
description = "BudgetWings low-cost travel intelligence engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BudgetWings contributors" }
]
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "apscheduler>=3.10.0",
  "pyyaml>=6.0.0",
  "anthropic>=0.45.0",
  "openai>=1.60.0",
  "tavily-python>=0.5.0",
  "python-telegram-bot>=21.10",
  "langgraph>=0.4.0",
  "langchain-core>=0.3.0",
  "sqlmodel>=0.0.22"
]

[project.optional-dependencies]
rag = [
  "chromadb>=0.5.0"
]

dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12"
]

[tool.setuptools]
packages = [
  "agents",
  "bot",
  "engine",
  "llm",
  "models",
  "scraper",
  "scraper.sources",
  "tools"
]
py-modules = ["cli", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["agents", "bot", "engine", "llm", "models", "scraper", "tools", "config"]
exclude = ["^\\.pytest_cache/", "^pytest-cache-files-"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
